<resources>
    <string name="app_name">Weather</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="image_contentDescription">icons</string>
    <string name="max_min">Max/Min :</string>
    <string name="real_feel">Real feel:</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="pressure">Pressure</string>
    <string name="weather_icon">weather icon</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunrise_icon">sunrise icon</string>
    <string name="sunset_icon">sunset icon</string>
    <string name="refresh">Refresh</string>
</resources>