<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_content_background_color"
    android:orientation="vertical"
    android:padding="@dimen/main_screen_content_padding"
    >

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/value_text_size"
        tools:text="2:00 PM" />

    <TextView
        android:id="@+id/tv_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/label_text_size"
        tools:text="Delhi" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_margin="@dimen/divider_margin"
        android:background="@color/divider_background" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ll_margin_top"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="4"
            >

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/temp_text_size"
            android:textStyle="bold"
            tools:text="20°ᶜ"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/desc_text_size"
            android:textStyle="bold"
            tools:text="Clouds"/>
        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="@dimen/identification_image_size"
            android:layout_height="@dimen/identification_image_size"
            android:layout_marginVertical="@dimen/identification_image_marginEnd"
            android:contentDescription="@string/image_contentDescription"
            app:srcCompat="@drawable/snowflake" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/tv_max_min"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/max_min"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/value_text_size"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_max_min_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/value_text_size"
                tools:text="28°/16° C" />
            <TextView
                android:id="@+id/tv_feels_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/real_feel"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/value_text_size"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_feels_like_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/value_text_size"
                tools:text="25°C" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_margin="@dimen/divider_margin"
        android:background="@color/divider_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/cl_padding_horizontal"
        >

        <LinearLayout
            android:id="@+id/ll_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:layout_marginVertical="@dimen/ll_margin_vertical"
            >
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cv_bg_color"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="@dimen/card_view_elevation"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/cv_ll_padding_horizontal"
                android:paddingVertical="@dimen/cv_ll_padding_vertical">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/wind"
                android:scaleType="fitCenter"
                android:layout_marginEnd="@dimen/icon_margin_end"
                android:contentDescription="@string/weather_icon"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/detail_title_size"
                android:textStyle="bold"
                />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="3.4 m/s"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/value_text_size"
            android:layout_marginTop="@dimen/tv_details_margin_top"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:layout_marginVertical="@dimen/ll_margin_vertical"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cv_bg_color"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                app:cardElevation="@dimen/card_view_elevation"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/cv_ll_padding_horizontal"
                    android:paddingVertical="@dimen/cv_ll_padding_vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:src="@drawable/humidity"
                        android:scaleType="fitCenter"
                        android:layout_marginEnd="@dimen/icon_margin_end"
                        android:contentDescription="@string/weather_icon" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/detail_title_size"
                        android:textStyle="bold"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="64%"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/value_text_size"
                android:layout_marginTop="@dimen/tv_details_margin_top"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_pressure"
            android:gravity="center"
            android:layout_marginVertical="@dimen/ll_margin_vertical"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cv_bg_color"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                app:cardElevation="@dimen/card_view_elevation"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/cv_ll_padding_horizontal"
                    android:paddingVertical="@dimen/cv_ll_padding_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/detail_title_size"
                        android:textStyle="bold"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1015 hPa"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/value_text_size"
                android:layout_marginTop="@dimen/tv_details_margin_top"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_visibility"
            android:gravity="center"
            android:layout_marginVertical="@dimen/ll_margin_vertical"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cv_bg_color"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                app:cardElevation="@dimen/card_view_elevation"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/cv_ll_padding_horizontal"
                    android:paddingVertical="@dimen/cv_ll_padding_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visibility"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/detail_title_size"
                        android:textStyle="bold"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10 Km"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/value_text_size"
                android:layout_marginTop="@dimen/tv_details_margin_top"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_margin="@dimen/divider_margin"
        android:background="@color/divider_background" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ll_margin_top"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/icon_sun_size"
                android:layout_height="@dimen/icon_sun_size"
                android:src="@drawable/sunrise"
                android:scaleType="fitCenter"
                android:contentDescription="@string/sunrise_icon"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"
                android:textSize="@dimen/detail_title_size"
                android:textColor="@color/primary_text_color"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text ="6:00 am"
                android:textSize="@dimen/value_text_size"
                android:textColor="@color/primary_text_color"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/icon_sun_size"
                android:layout_height="@dimen/icon_sun_size"
                android:src="@drawable/sunset"
                android:scaleType="fitCenter"
                android:contentDescription="@string/sunset_icon"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset"
                android:textSize="@dimen/detail_title_size"
                android:textColor="@color/primary_text_color"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text ="6:00 pm"
                android:textSize="@dimen/value_text_size"
                android:textColor="@color/primary_text_color"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>